<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_primary"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="40dp"
        android:orientation="vertical"
        android:shadowDx="0"
        android:shadowDy="1"
        android:shadowColor="#1a32e2eb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/exit_tint"
            android:textColor="#ffffffff"
            android:textSize="20sp"
            android:layout_marginTop="40dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="60dp"
            android:gravity="center">
            <TextView
                android:id="@+id/cancel"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:text="@string/cancel"
                android:textColor="#ff094873"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_cancel"
                android:textSize="16sp"
                android:gravity="center" />
            <TextView
                android:id="@+id/exit"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:text="@string/exit"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                android:background="@drawable/exit_button_bg"
                android:textSize="16sp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>