<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:paddingTop="28dp"
        android:paddingBottom="19dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/free_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/main_item_padding_ver"
            android:paddingBottom="@dimen/main_item_padding_ver"
            android:gravity="center"
            android:layout_marginStart="@dimen/main_item_margin_hor"
            android:layout_marginEnd="@dimen/main_item_margin_hor"
            android:layout_marginTop="@dimen/main_item_margin_ver"
            android:layout_marginBottom="@dimen/main_item_margin_ver"
            android:background="@drawable/background_item_main"
            android:textSize="@dimen/main_page_item_text_size"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:text="@string/tab_freely"/>

        <TextView
            android:id="@+id/item_template_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/main_item_padding_ver"
            android:paddingBottom="@dimen/main_item_padding_ver"
            android:gravity="center"
            android:layout_marginStart="@dimen/main_item_margin_hor"
            android:layout_marginEnd="@dimen/main_item_margin_hor"
            android:layout_marginTop="@dimen/main_item_margin_ver"
            android:layout_marginBottom="@dimen/main_item_margin_ver"
            android:background="@drawable/background_item_main"
            android:textSize="@dimen/main_page_item_text_size"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:text="@string/tab_template"/>

        <TextView
            android:id="@+id/item_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/main_item_padding_ver"
            android:paddingBottom="@dimen/main_item_padding_ver"
            android:gravity="center"
            android:layout_marginStart="@dimen/main_item_margin_hor"
            android:layout_marginEnd="@dimen/main_item_margin_hor"
            android:layout_marginTop="@dimen/main_item_margin_ver"
            android:layout_marginBottom="@dimen/main_item_margin_ver"
            android:background="@drawable/background_item_main"
            android:textSize="@dimen/main_page_item_text_size"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:text="@string/tab_frame"/>

        <TextView
            android:id="@+id/item_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/main_item_padding_ver"
            android:paddingBottom="@dimen/main_item_padding_ver"
            android:gravity="center"
            android:layout_marginStart="@dimen/main_item_margin_hor"
            android:layout_marginEnd="@dimen/main_item_margin_hor"
            android:layout_marginTop="@dimen/main_item_margin_ver"
            android:layout_marginBottom="@dimen/main_item_margin_ver"
            android:background="@drawable/background_item_main"
            android:textSize="@dimen/main_page_item_text_size"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:text="@string/tab_save" />
    </LinearLayout>
</RelativeLayout>